@@ -1336,6 +1336,39 @@ class EcoWittWH40Packet(Packet):
         return Packet.add_identifiers(pkt, station_id, EcoWittWH40Packet.__name__)
 
 
+class EcoWittWS68Packet(Packet):
+    # This is for a WS68 wind/solar sensor
+
+    # {"time" : "2022-09-26 00:47:41", "model" : "EcoWitt-WS68", "id" : 388, "battery_raw" : 90, "battery_ok" : 1, "lux_raw" : 0, "wind_avg_raw" : 0, "wind_max_raw" : 0, "wind_dir_deg" : 157, "data" : "00 210", "mic" : "CRC"}
+
+    IDENTIFIER = "EcoWitt-WS68"
+
+    @staticmethod
+    def parse_json(obj):
+        pkt = dict()
+        pkt['dateTime'] = Packet.parse_time(obj.get('time'))
+        pkt['usUnits'] = weewx.METRICWX
+        pkt['station_id'] = obj.get('id')
+        pkt['battery'] = Packet.get_battery(obj)
+        x = Packet.get_float(obj, 'battery_raw')
+        if x is not None:
+            pkt['supplyVoltage'] = 2 * x
+        pkt['luminosity'] = Packet.get_float(obj, 'lux_raw')
+        x = Packet.get_float(obj, 'wind_avg_raw')
+        if x is not None:
+            pkt['wind_speed'] = x / 10
+        x = Packet.get_float(obj, 'wind_max_raw')
+        if x is not None:
+            pkt['wind_gust'] = x / 10
+        pkt['wind_dir'] = Packet.get_float(obj, 'wind_dir_deg')
+        return EcoWittWS68Packet.insert_ids(pkt)
+
+    @staticmethod
+    def insert_ids(pkt):
+        station_id = pkt.pop('station_id', 0)
+        return Packet.add_identifiers(pkt, station_id, EcoWittWS68Packet.__name__)
+
+
 class EM3551HPacket(Packet):
     # The EMAX-EM3551H sensor cluster, used in the raddy weather station
 
